--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 rand = { version = "0.9", default-features = false }
 image = { version = "0.25", optional = true }
+ultraviolet = { version = "0.10.0", features = ["int"] }
 
 [dev-dependencies]
 image = "0.25"
